--- a/css/styles.css
+++ b/css/styles.css
@@ -11001,7 +11001,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255,255, 0.4);
+  background: rgba(255, 200, 0, 0.9);
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -11352,7 +11352,8 @@ iframe {
 
 .contact1-pic img {
   width: 32rem;
-  margin-right: 10rem;
+  margin-right: 15rem;
+  margin-bottom: 10rem;
 }
 
 
@@ -11401,11 +11402,11 @@ textarea.input1 + .shadow-input1 {
 .input1 {
   display: block;
   width: 100%;
-  background: #e6e6e6;
+  background: #f2f2f2;
   font-family: Montserrat-Bold;
   font-size: 15px;
   line-height: 1.5;
-  color: #666666;
+  color: #888888;
 }
 
 .shadow-input1 {
@@ -11455,7 +11456,7 @@ textarea.input1 + .shadow-input1 {
   min-width: 193px;
   height: 50px;
   border-radius: 25px;
-  background: #57b846;
+  background: #ffc800;
   font-family: Montserrat-Bold;
   font-size: 15px;
   line-height: 1.5;
@@ -11612,4 +11613,8 @@ textarea.input1 + .shadow-input1 {
     visibility: visible;
     opacity: 1;
   }
+}
+
+#calculator {
+
 }
