--- a/css/styles.css
+++ b/css/styles.css
@@ -11615,6 +11615,14 @@ textarea.input1 + .shadow-input1 {
   }
 }
 
-#calculator {
+@media (max-width: 500px) {
+  #mainNav .navbar-brand {
+    font-size: 0.55rem !important;
+  }
+}
 
+@media (max-width: 700px) and (min-width: 400px) {
+  #mainNav .navbar-brand {
+    font-size: 0.85rem !important;
+  }
 }
