--- a/css/styles.css
+++ b/css/styles.css
@@ -2590,10 +2590,6 @@ textarea.form-control-lg {
   print-color-adjust: exact;
 }
 
-.form-check-input[type=checkbox] {
-  border-radius: 0.25em;
-}
-
 .form-check-input[type=radio] {
   border-radius: 50%;
 }
@@ -2613,19 +2609,10 @@ textarea.form-control-lg {
   border-color: #ffc800;
 }
 
-.form-check-input:checked[type=checkbox] {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
-}
-
 .form-check-input:checked[type=radio] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 
-.form-check-input[type=checkbox]:indeterminate {
-  background-color: #ffc800;
-  border-color: #ffc800;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
-}
 
 .form-check-input:disabled {
   pointer-events: none;
@@ -12782,10 +12769,6 @@ header.masthead .masthead-heading {
 }
 
 @media (min-width: 768px) {
-  header.masthead {
-    padding-top: 17rem;
-    padding-bottom: 12.5rem;
-  }
 
   header.masthead .masthead-subheading {
     font-size: 1.75rem;
@@ -13305,6 +13288,11 @@ textarea.input1+.shadow-input1 {
   margin-bottom: 20px;
 }
 
+::placeholder {
+  color: rgb(120, 120, 120) !important;
+  opacity: 1;
+}
+
 .input1 {
   display: block;
   width: 100%;
@@ -13525,6 +13513,13 @@ textarea.input1+.shadow-input1 {
   #portfolio .portfolio-item {
     margin: auto;
   }
+
+  header.masthead {
+    padding-top: 5rem;
+    padding-bottom: 8.5rem;
+    background-position: center !important;
+  }
+
 }
 
 @media (max-width: 500px) {
